fixed service work icons clipping

--- a/src/layouts/service.css
+++ b/src/layouts/service.css
@@ -262,7 +262,7 @@
     z-index: 21;
     scrollbar-width: thin;
     scrollbar-color: rgba(21, 192, 149, 0.568) rgba(11, 204, 140, 0.137);
-    padding-bottom: 50vh;
+    
 }
 
 .info2-container h1{
@@ -272,14 +272,14 @@
     display: block;
     font-weight: bold;
     font-size: calc(80% + 3vh);
-    margin-bottom: 3vh;
+    margin-bottom: 1vh;
     
 }
 .info2-container p {
     text-align: right;
-    margin-left: 27%;
-    height: 20vh;
-    width: 55%;
+    margin-left: 15%;
+    margin-bottom: 20vh;
+    width: 70%;
     margin-right: 18%;
     display: block;
     font-size: calc(40% + 2vh);
@@ -482,8 +482,9 @@
   outline: none;
 }
 .work-text-s {
-  margin-left: 22%;
-  margin-top: 8%;
+  margin-left: 30em;
+  margin-top: 3%;
+  margin-bottom: 3%;
   width: 60%;
   display: flex;
   justify-content: center;
@@ -559,10 +560,11 @@
 }
 
 .btn-estdafa {
-  margin-right: 20%;
-  margin-top: -7%;
-  margin-bottom: 10%;
-  
+  margin-right: 35%;
+ margin-top: -12vh;
+ margin-bottom: 10vh;
+ font-size: 18px;
+ position: relative;
   
   
 }
@@ -606,9 +608,6 @@
 
 /************** MOBILE VIEW *****************/
 @media  (orientation: landscape) {
-  info4-img-m {
-    display: none;
-  }
   .service-bg-m {
     display: none;
   }
@@ -814,9 +813,7 @@
   width: 70%;
   
 }
-.info4-img {
-  display: none;
-}
+
 .info5-container h1{
   margin-top: 13vh;
   margin-right: 12%;
@@ -850,7 +847,7 @@
 
 .btn-estdafa {
   margin-right: 35%;
- margin-top: 10%;
+ 
  font-size: 18px;
  
   
